// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frame should render a combobox variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-2"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select tag"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-2"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-2"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a combobox variant with a placeholder 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-7"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select tag"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-7"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-7"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          placeholder="Placeholder"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a custom dropdown 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-21"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select tag"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-21"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-21"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a default variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-1"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-label="Search"
  aria-roledescription="listbox"
  class="select default"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="0"
>
  <div
    aria-disabled="false"
    aria-label="Search"
    class="display"
    role="textbox"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-1"
    >
      undefined. Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="placeholder"
    >
       
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a default variant with a placeholder 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-6"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-label="Search"
  aria-roledescription="listbox"
  class="select default"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="0"
>
  <div
    aria-disabled="false"
    aria-label="Search"
    class="display"
    role="textbox"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-6"
    >
      Placeholder. Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="placeholder"
    >
      Placeholder
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a disabled combobox variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-12"
  aria-disabled="true"
  aria-expanded="false"
  class="select tag is-disabled"
  data-terra-select-combobox="true"
  intl="[object Object]"
  tabindex="-1"
>
  <div
    aria-disabled="true"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-12"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-12"
          aria-disabled="true"
          aria-label="Search"
          class="search-input"
          disabled=""
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a disabled default variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-11"
  aria-disabled="true"
  aria-expanded="false"
  aria-label="Search"
  aria-roledescription="listbox"
  class="select default is-disabled"
  data-terra-select-combobox="true"
  intl="[object Object]"
  tabindex="-1"
>
  <div
    aria-disabled="true"
    aria-label="Search"
    class="display"
    role="textbox"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-11"
    >
      undefined. Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="placeholder"
    >
       
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a disabled multiple variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-13"
  aria-disabled="true"
  aria-expanded="false"
  class="select multiple is-disabled"
  data-terra-select-combobox="true"
  intl="[object Object]"
  tabindex="-1"
>
  <div
    aria-disabled="true"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-13"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-13"
          aria-disabled="true"
          aria-label="Search"
          class="search-input"
          disabled=""
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a disabled search variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-14"
  aria-disabled="true"
  aria-expanded="false"
  class="select search is-disabled"
  data-terra-select-combobox="true"
  intl="[object Object]"
  tabindex="-1"
>
  <div
    aria-disabled="true"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-14"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="content"
    >
      <input
        aria-describedby="terra-select-screen-reader-description-14"
        aria-disabled="true"
        aria-label="Search"
        class="search-input"
        disabled=""
        type="text"
      />
    </div>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a disabled tag variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-15"
  aria-disabled="true"
  aria-expanded="false"
  class="select tag is-disabled"
  data-terra-select-combobox="true"
  intl="[object Object]"
  tabindex="-1"
>
  <div
    aria-disabled="true"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-15"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-15"
          aria-disabled="true"
          aria-label="Search"
          class="search-input"
          disabled=""
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a multiple variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-3"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select multiple"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-3"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-3"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a multiple variant with a placeholder 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-8"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select multiple"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-8"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-8"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          placeholder="Placeholder"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a search variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-4"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select search"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-4"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="content"
    >
      <input
        aria-describedby="terra-select-screen-reader-description-4"
        aria-disabled="false"
        aria-label="Search"
        class="search-input"
        type="text"
      />
    </div>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a search variant with a placeholder 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-9"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select search"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-9"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="content"
    >
      <input
        aria-describedby="terra-select-screen-reader-description-9"
        aria-disabled="false"
        aria-label="Search"
        class="search-input"
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a tag variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-5"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select tag"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-5"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-5"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render a tag variant with a placeholder 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-10"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select tag"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-10"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-10"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          placeholder="Placeholder"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render an invalid combobox variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-17"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select tag is-invalid"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-17"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-17"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render an invalid default variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-16"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-label="Search"
  aria-roledescription="listbox"
  class="select default is-invalid"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="0"
>
  <div
    aria-disabled="false"
    aria-label="Search"
    class="display"
    role="textbox"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-16"
    >
      undefined. Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="placeholder"
    >
       
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render an invalid multiple variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-18"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select multiple is-invalid"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-18"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-18"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render an invalid search variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-19"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select search is-invalid"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-19"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="content"
    >
      <input
        aria-describedby="terra-select-screen-reader-description-19"
        aria-disabled="false"
        aria-label="Search"
        class="search-input"
        type="text"
      />
    </div>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should render an invalid tag variant 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-20"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  class="select tag is-invalid"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="display"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-20"
    >
      Use up and down arrow keys to navigate through options.
    </span>
    <ul
      class="content"
    >
      <li
        class="search-wrapper"
      >
        <input
          aria-describedby="terra-select-screen-reader-description-20"
          aria-disabled="false"
          aria-label="Search"
          class="search-input"
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    class="toggle toggle-narrow"
  >
    <button
      aria-label="Click to navigate to options"
      class="toggle-btn"
      data-terra-form-select-toggle-button="true"
      type="button"
    >
      <span
        class="arrow-icon"
        data-terra-form-select-toggle-button-icon="true"
      />
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Frame should update the aria-live text when the search has no results 1`] = `
<InjectIntl(Frame)
  dropdown={[Function]}
  variant="tag"
>
  <Frame
    disabled={false}
    dropdown={[Function]}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en-US",
        "messages": Object {
          "Terra.form.select.add": "Add \\"{text}\\"",
          "Terra.form.select.ariaLabel": "Search",
          "Terra.form.select.defaultDisplay": "- Select -",
          "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
          "Terra.form.select.selected": "{text} Selected",
        },
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isInvalid={false}
    variant="tag"
  >
    <div
      aria-describedby="terra-select-screen-reader-description-23"
      aria-disabled={false}
      aria-expanded={false}
      aria-haspopup="true"
      aria-label={null}
      className="select tag"
      data-terra-select-combobox={true}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en-US",
          "messages": Object {
            "Terra.form.select.add": "Add \\"{text}\\"",
            "Terra.form.select.ariaLabel": "Search",
            "Terra.form.select.defaultDisplay": "- Select -",
            "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
            "Terra.form.select.selected": "{text} Selected",
          },
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="application"
      tabIndex="-1"
    >
      <div
        aria-disabled={false}
        aria-label={null}
        className="display"
        role={null}
      >
        <span
          className="visually-hidden-component"
          hidden={true}
          id="terra-select-screen-reader-description-23"
        >
          Use up and down arrow keys to navigate through options.
        </span>
        <ul
          className="content"
        >
          <li
            className="search-wrapper"
          >
            <input
              aria-describedby="terra-select-screen-reader-description-23"
              aria-disabled={false}
              aria-label="Search"
              className="search-input"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              type="text"
              value=""
            />
          </li>
        </ul>
      </div>
      <div
        className="toggle toggle-narrow"
      >
        <button
          aria-label="Click to navigate to options"
          className="toggle-btn"
          data-terra-form-select-toggle-button={true}
          onMouseDown={[Function]}
          type="button"
        >
          <span
            className="arrow-icon"
            data-terra-form-select-toggle-button-icon={true}
          />
        </button>
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        aria-relevant="additions text"
        className="visually-hidden-component"
      />
    </div>
  </Frame>
</InjectIntl(Frame)>
`;
